--- a/css/demo.css
+++ b/css/demo.css
@@ -13,39 +13,16 @@ html {
   font-size: 625%;
 }
 .box {
-  height: 100px;
-  width: 100px;
+  color: #eeeeee;
+  display: block;
+  padding-bottom: 200px;
+  width: 200px;
+  background-color: khaki;
+  color: red;
 }
-.border {
-  width: 300px;
-  height: 100px;
-  margin: auto;
-  border: 5px solid lawngreen;
-}
-.border .red {
-  width: 100px;
-  background-color: #ff0000;
-  float: left;
-  display: inline;
-  height: 100px;
-}
-.border .green {
-  height: 100px;
-  width: 100px;
-  background-color: #008000;
-  float: left;
-  display: inline;
-}
-.border .yellow {
-  height: 100px;
-  width: 100px;
-  background-color: #ffff00;
-  float: left;
-  display: inline;
-}
-.purple {
-  height: 100px;
-  width: 100px;
-  background-color: #800080;
-  margin: 0 auto;
+.box1 {
+  padding-bottom: 200px;
+  width: 200px;
+  background-color: khaki;
+  color: red;
 }
