--- a/less/loginpage.less
+++ b/less/loginpage.less
@@ -8,53 +8,52 @@ body {
   background: url("../img/loginphoto.jpg");
   background-size: cover;
 }
-
-.main {
-  .fix;
-  margin: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  .bgcolor(white);
-  border-radius: 50px;
-  width: 300px;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  height: 300px;
-  .login {
-    img{
-      .abs;
-      .dib;
-      width:50px;
-      height:50px;
-      margin: -50px 0 0 100px;
-    }
-    span{
-      .abs;
-      margin-top:69px;
-      margin-left:30px;
-      color:red;
-    }
-    p{
-      .abs;
-      margin-top:139px;
-      margin-left:30px;
-      color:red;
-    }
-    .flex;
+.firstone {
+    .fix;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    .bgcolor(white);
+    border-radius: 50px;
+    width: 300px;
+    display: flex;
+    align-items: center;
     flex-wrap: wrap;
-    width: 250px;
-    margin: 0 auto;
-    input{
-      width:90%;
-      margin:20px auto;
-      .dib;
-    }
-    button{
-      width:90%;
-      margin:20px auto;
+    height: 300px;
+    .login {
+      img {
+        .abs;
+        .dib;
+        width: 50px;
+        height: 50px;
+        margin: -50px 0 0 100px;
+      }
+      span {
+        .abs;
+        margin-top: 69px;
+        margin-left: 30px;
+        color: red;
+      }
+      p {
+        .abs;
+        margin-top: 139px;
+        margin-left: 30px;
+        color: red;
+      }
+      .flex;
+      flex-wrap: wrap;
+      width: 250px;
+      margin: 0 auto;
+      input {
+        width: 90%;
+        margin: 20px auto;
+        .dib;
+      }
+      button {
+        width: 90%;
+        margin: 20px auto;
+      }
     }
   }
-}
